Foi refatorado as dependências de service para não depender de repository e foi feita alterações de segurança